; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/xz/src/xz/extr_util.c_round_up_to_mib.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/xz/src/xz/extr_util.c_round_up_to_mib.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @round_up_to_mib(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = ashr i32 %3, 20
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @UINT32_C(i32 1)
  %7 = shl i32 %6, 20
  %8 = sub nsw i32 %7, 1
  %9 = and i32 %5, %8
  %10 = icmp ne i32 %9, 0
  %11 = zext i1 %10 to i32
  %12 = add nsw i32 %4, %11
  ret i32 %12
}

declare dso_local i32 @UINT32_C(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
